fix issue cover overflow

--- a/_sass/issue.scss
+++ b/_sass/issue.scss
@@ -106,4 +106,6 @@ hr {
 
 .cover-image {
   max-width: 1000px;
+  display: block;
+  width: 100%;
 }
